# SupportAPI

./: .env  README.md  pyproject.toml
Data/: customers.json  file.txt  tickets.json
src/support_api/: enrich.py  filters.py  loggin.py  stream.py  txter.txt  utils.py
src/support_api.egg-info/: SOURCES.txt  requires.txt
src/support_api/models/: __init__.py  ticket.py
src/support_api/tests/: test_filters.py  test_models.py  test_routing_rules.py  test_utils.py
